# rs_crud_actix_demo

./: Cargo.toml  Dockerfile  Makefile
.github/workflows/: docker-publish.yml
config/: default.toml  dev.toml  testing.toml
scripts/: deps-dn.sh  deps-up.sh  podman-deps-dn.sh  podman-deps-up.sh
src/: lib.rs  main.rs  metrics.rs  settings.rs
src/datasources/: event.rs
src/routers/: event.rs  mod.rs  status.rs
tests/: test_intg_app.rs  test_intg_metrics.rs  test_intg_routers_event.rs
