[package]
name = "rs_crud_actix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "^4"
uuid = {version = "1.1.2", features = ["v4", "fast-rng", "serde"]}
serde = { version = "1.0.132", features = ["derive"]}
serde_json = "1.0.82"
serde_derive = "^1.0.138"
env_logger = "0.9.0"
dotenv = "0.15.0"
diesel = "1.4.8"
config = "^0.13.1"
prometheus = "^0.13.1"
actix-web-prom = "^0.6.0"