[package]
name = "rs_crud_actix"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "^4.1.0"
uuid = {version = "1.1.2", features = ["v4", "fast-rng", "serde"]}
serde = { version = "1.0.132", features = ["derive"]}
serde_json = "^1.0"
serde_derive = "^1.0.138"
env_logger = "0.9.0"
dotenv = "0.15.0"
diesel = "1.4.8"
config = "^0.13.1"
prometheus = "^0.13.1"
actix-web-prom = "^0.6.0"
lazy_static = "1.4.0"
derive_more = "0.99.17"
futures-util = "0.3.21"
actix-web-json-error-middleware = { git = "https://github.com/howaboutudance/actix-json-error-middleware.git", branch = "main", version = "^0.2.1" }
